@@ -10,6 +10,7 @@ Version 1.3.1
   - Icon description is not exported into *.desktop file [BUG-69];
   - Winetrick's item description label doesn't wrap properly [BUG-71];
   - Qt5: detailed view item selection duplicate [BUG-75];
+  - q4wine-cli does not accept extra app arguments [BUG-78];
 
 Version 1.3
  Added:
